[gd_scene load_steps=4 format=2]

[ext_resource path="res://pages/home_page.gd" type="Script" id=1]
[ext_resource path="res://fonts/font_default_bold.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/scrollboxcontainer_supporting_mobile_drag_and_drop_and_scrolling.gd" type="Script" id=3]

[node name="HomePage" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 478.0
margin_bottom = 851.0

[node name="lbl_PageTitle" type="Label" parent="VBoxContainer"]
margin_right = 476.0
margin_bottom = 43.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Home"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 51.0
margin_right = 476.0
margin_bottom = 99.0
custom_constants/margin_right = 20
custom_constants/margin_left = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_GotoChildPage" type="Button" parent="VBoxContainer/MarginContainer"]
margin_left = 20.0
margin_right = 456.0
margin_bottom = 48.0
text = "Go to another page"

[node name="lbl_Instruction" type="Label" parent="VBoxContainer"]
margin_top = 107.0
margin_right = 476.0
margin_bottom = 190.0
text = "Or just swipe left!
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_SortStuff" type="Label" parent="VBoxContainer"]
margin_top = 198.0
margin_right = 476.0
margin_bottom = 238.0
text = "List of stuff that you can sort:"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 246.0
margin_right = 476.0
margin_bottom = 849.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
script = ExtResource( 3 )

[node name="ContainerList" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 476.0
margin_bottom = 603.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="VBoxContainer/MarginContainer/btn_GotoChildPage" to="." method="_on_btn_GotoChildPage_pressed"]
[connection signal="swipe" from="VBoxContainer/ScrollContainer" to="." method="_on_ScrollContainer_swipe"]
